--- a/index.html
+++ b/index.html
@@ -238,8 +238,8 @@
                             <img src="img/burger/7.png" alt="">
                         </div>
                         <div class="info">
-                            <h3>Smokin Burger</h3>
-                            <p>Great way to make your business appear trust and relevant.</p>
+                            <h3>Smokin Burguer</h3>
+                            <p>Great way to make your business appear trust and relevant</p>
                             <span>$5</span>
                         </div>
                     </div>
